--- a/appstore/installer/scripts/entropypianotuner.desktop
+++ b/appstore/installer/scripts/entropypianotuner.desktop
@@ -2,7 +2,7 @@
 Name=Entropy Piano Tuner
 Comment=Tune your piano
 Exec=entropypianotuner %f
-Icon=entropypianotuner.png
+Icon=entropypianotuner
 Terminal=false
 Type=Application
 MimeType=application/ept;
