--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/tp3log"]
 	path = thirdparty/tp3log
 	url = https://gitlab.com/tp3/tp3log.git
+[submodule "thirdparty/qtcurl"]
+	path = thirdparty/qtcurl
+	url = git@github.com:tarasvb/qtcurl.git
